About component CSS styling. Added new variables for the colors; Fixed overflow issues

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,7 +22,7 @@
   opacity: 0.95;
 }
 
-/* ABOUT COMPONENT STYLES  */
+/* MAIN CONTAINER STYLES  */
 
 .container {
   position: relative;
@@ -37,17 +37,38 @@
   overflow: auto;
 }
 
+/* TOP CONTAINER STYLES  */
+
+#top-container {
+  display: flex;
+  flex-direction: column;
+  /* background-color: red; */
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
+}
+
+/* STYLES FOR A CLOSED CONTAINER / DEFAULT  */
+
 .info-container {
   background-color: var(--info-box-color);
   border-radius: 0.5rem;
   /* padding: 1rem; */
-  /* padding: 0.5rem 1rem; */
-  color: var(--modal-color);
+  /* color: var(--modal-color); */
+  color: var(--color-text-primary);
   margin-bottom: 0.5rem;
   height: 7rem;
   overflow: hidden;
-  box-shadow: inset 0 0 10px 5px var(--tooltip-color);
+  box-shadow: inset 0 0 10px 5px var(--color-tooltip);
   transition: all 0.25s linear;
+}
+
+.info-container h1 {
+  transition: all 0.25s linear;
+}
+
+.info-container h1:hover {
+  color: var(--color-accent);
 }
 
 .info-container > h1 {
@@ -55,49 +76,54 @@
   align-items: center;
   height: 4rem;
   cursor: pointer;
-  /* background-color: red; */
+  margin-bottom: 1rem;
+  border-bottom: 1px solid var(--modal-color);
+  /* box-shadow: inset 0 0 1px 1px white; */
 }
 
-#top-container {
-  display: flex;
-  flex-direction: column;
-  height: 20rem;
-  /* background-color: red; */
-  justify-content: center;
-  align-items: center;
-  /* overflow: hidden; */
-  margin-bottom: 0.5rem;
-  border-radius: 0.5rem;
-}
+/* STYLES FOR AN OPEN CONTAINER  */
 
 .open {
   height: inherit;
-  color: white;
+  color: var(--color-text-primary);
+  /* color: white; */
   background-color: var(--info-box-color);
   box-shadow: inset 0 0 3px 2px hsl(0, 0%, 5%);
-
-  /* overflow: visible; */
+  animation-name: overflowAnim;
+  animation-duration: 1s;
+  overflow: visible;
 }
 
+@keyframes overflowAnim {
+  from {
+    overflow: hidden;
+  }
+  to {
+    overflow: visible;
+  }
+}
+
+.open h1 {
+  /* color: var(--color-accent); */
+  /* color: var(--color-accent); */
+  /* opacity: .6; */
+  /* text-shadow: 0px 0px 10px var(--color-accent); */
+}
+
+/* -------------------------- */
+
 #basic-info {
-  width: 100%;
   font-size: 0.75rem;
-  padding: 0;
-  height: 120px;
-  /* background-color: red; */
-  margin: 0;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 #profile-pic {
-  object-position: 75%;
+  object-position: 65%;
   height: 100px;
   width: 100px;
-  transform: translateY(10px);
+  background-color: purple;
+  margin: 0.5rem;
+  /* transform: translateY(10px); */
   border-radius: 50%;
 }
 
@@ -128,17 +154,10 @@
   /* background-color: red; */
 }
 
-hr {
-  color: var(--tooltip-color);
-  width: 90%;
-  margin: 0 auto;
-  margin-bottom: 1rem;
-}
-
 h1,
 h2,
 h3 {
-  font-weight: 400;
+  /* font-weight: 400; */
   /* text-align: center; */
   padding: 0 1rem;
 }
@@ -159,14 +178,14 @@ p {
 }
 
 a {
+  color: var(--color-text-primary);
   text-decoration: none;
-  color: white;
   font-weight: 500;
   transition: color 0.25s linear;
 }
 
 a:hover {
-  color: var(--accent-color);
+  color: var(--color-accent);
 }
 
 .skills-container {
@@ -190,4 +209,11 @@ a:hover {
 #close-button:hover {
   cursor: pointer;
   background-color: hsl(0, 0%, 5%);
+}
+
+@media (max-width: 1080px) {
+  #top-container h1 {
+    /* color: red; */
+    /* font-size: 8vw; */
+  }
 }
