--- a/src/components/About/AboutIcon.css
+++ b/src/components/About/AboutIcon.css
@@ -40,7 +40,7 @@ svg {
 .social-icon:hover + .tooltip,
 .tooltip:hover {
   visibility: visible;
-  background-color: var(--tooltip-color);
+  background-color: var(--color-tooltip);
   box-shadow: inset 0 0 5px 2px hsl(0, 0%, 14%);
 
   color: white;
