--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -80,7 +80,7 @@
 .logo-container img {
   width: 100%;
   height: 100%;
-  /* border: 2px solid var(--accent-color); */
+  /* border: 2px solid var(--color-accent); */
   border-radius: 50%;
 }
 
@@ -106,12 +106,12 @@
 }
 
 .nav-item span:hover {
-  color: var(--accent-color);
+  color: var(--color-accent);
   cursor: pointer;
 }
 
 .nav-item .active {
-  color: var(--accent-color);
+  color: var(--color-accent);
 }
 @media only screen and (max-width: 800px) {
   .nav-items {
